--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body::before {
   bottom: calc(100% - 100vh);
   z-index: -1;
   background-color: rgba(52, 253, 38, 0.02);
+  transition: all 0.2s ease-in-out;
 }
 body:after {
   left: calc(100% - 100vh);
@@ -26,6 +27,7 @@ body:before {
 .mainStyles {
   background-color: rgba(0, 128, 128, 0.75);
   font-size: 100%;
+  transition: all 0.2s ease-in-out;
 }
 .mainStyles .logo-wrapper,
 .mainStyles .skills-wrapper {
@@ -122,8 +124,8 @@ body:before {
   max-width: 1280px;
   height: calc(100vh - 20px);
 }
-.mainStyles .main-container:before,
-.mainStyles .main-container:after {
+.mainStyles .main-container:after,
+.mainStyles .main-container:before {
   content: "";
   display: inline-block;
   position: fixed;
@@ -155,6 +157,11 @@ body:before {
   box-shadow: 0 0 105px inset rgba(0, 128, 128, 0.6);
   margin: 10px auto;
 }
+.mainStyles .main-image img {
+  display: none;
+  transition: all 1s ease-in-out;
+  transform: rotate(0deg);
+}
 .mainStyles .info-wrapper {
   display: table;
   margin: 0 auto;
@@ -168,6 +175,50 @@ body:before {
   border-radius: 5px;
   margin: o auto;
 }
+.mainStyles .social-icons {
+  display: table;
+  margin: 0 auto;
+  padding: 0;
+}
+.mainStyles .social-icons .item {
+  display: table-cell;
+}
 .mainStyles .hide {
   display: none;
+}
+.mainStyles.layout_2:before,
+.mainStyles.layout_2:after {
+  border-radius: 0;
+}
+.mainStyles.layout_2:before {
+  background-color: rgba(253, 52, 38, 0.02);
+}
+.mainStyles.layout_2:after {
+  background-color: rgba(52, 253, 38, 0.02);
+}
+.mainStyles.layout_2 .main-image {
+  position: relative;
+}
+.mainStyles.layout_2 .main-image:before {
+  content: none;
+}
+.mainStyles.layout_2 .main-image:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  left: 50px;
+  bottom: -50px;
+  background: rgba(0, 128, 128, 0.75);
+  transform: rotateX(84deg) skew(-48deg) rotate(56deg);
+  z-index: -1;
+}
+.mainStyles.layout_2 .main-image img {
+  width: 200px;
+  display: block;
+  border: 10px groove rgba(0, 128, 128, 0.36);
+  transform: rotate(-2deg);
+  transition: all 1s ease-in-out;
+  z-index: 1;
 }
