--- a/css/styles.css
+++ b/css/styles.css
@@ -4,30 +4,15 @@ html {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-body::after,
-body::before {
-  content: "";
-  width: 100%;
-  position: fixed;
-  height: 100vh;
-  bottom: calc(100% - 100vh);
-  z-index: -1;
-  background-color: rgba(52, 253, 38, 0.02);
-  transition: all 0.2s ease-in-out;
-}
-body:after {
-  left: calc(100% - 100vh);
-  border-radius: 100% 0 100% 0;
-  background-color: rgba(253, 52, 38, 0.02);
-}
-body:before {
-  right: calc(100% - 100vh);
-  border-radius: 0 100% 0 100%;
-}
 .mainStyles {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%23008080' fill-opacity='0.13'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
   background-color: rgba(0, 128, 128, 0.75);
   font-size: 100%;
   transition: all 0.2s ease-in-out;
+}
+.mainStyles .sections {
+  margin: 20px auto 0;
 }
 .mainStyles .logo-wrapper,
 .mainStyles .skills-wrapper {
@@ -59,7 +44,7 @@ body:before {
   margin: 0 -40px 15px;
 }
 .mainStyles .logo .sub-title {
-  margin: -20px auto 0;
+  margin: -15px auto 0;
   letter-spacing: normal;
   text-indent: .092em;
   text-transform: uppercase;
@@ -116,29 +101,13 @@ body:before {
   padding: 20px 10px;
 }
 .mainStyles .main-container {
-  background: rgba(0, 128, 128, 0.04);
+  background: rgba(0, 128, 128, 0.005);
   display: block;
   margin: 0 auto;
   position: relative;
   padding: 20px 20px 0;
-  max-width: 1280px;
   height: calc(100vh - 20px);
-}
-.mainStyles .main-container:after,
-.mainStyles .main-container:before {
-  content: "";
-  display: inline-block;
-  position: fixed;
-  background: rgba(0, 128, 128, 0.41);
-  width: 100%;
-  height: 100vh;
-  top: 0;
-}
-.mainStyles .main-container:before {
-  left: 100%;
-}
-.mainStyles .main-container:after {
-  right: 100%;
+  box-shadow: 0 0 300px inset rgba(0, 0, 0, 0.3);
 }
 .mainStyles .main-image {
   display: table;
@@ -171,48 +140,73 @@ body:before {
   vertical-align: middle;
   text-align: center;
   padding: 20px;
-  background: rgba(253, 253, 253, 0.16);
+  background: rgba(253, 253, 253, 0.6);
   border-radius: 5px;
   margin: o auto;
 }
 .mainStyles .social-icons {
   display: table;
-  margin: 0 auto;
   padding: 0;
 }
 .mainStyles .social-icons .item {
   display: table-cell;
+  padding: 0 10px;
+}
+.mainStyles .social-icons .item a {
+  display: block;
+}
+.mainStyles .social-icons .item a svg {
+  display: block;
+  background: white;
+  border-radius: 50%;
+  padding: 2px;
+  transition: all 0.03s ease-in-out;
+}
+.mainStyles .social-icons .item a svg.linked-in:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 128, 0.75) !important;
+  background: #007AB9;
+}
+.mainStyles .social-icons .item a svg.linked-in:hover path {
+  fill: white !important;
+  transition: all 0.3s ease-in-out;
+}
+.mainStyles .social-icons .item a svg.gitHub:hover {
+  box-shadow: 0 0 10px white !important;
+  background: black;
+}
+.mainStyles .social-icons .item a svg.gitHub:hover path {
+  fill: white !important;
+  transition: all 0.3s ease-in-out;
+}
+.mainStyles .social-icons .item a svg path {
+  transition: all 0.3s ease-in-out;
 }
 .mainStyles .hide {
   display: none;
 }
-.mainStyles.layout_2:before,
-.mainStyles.layout_2:after {
-  border-radius: 0;
-}
-.mainStyles.layout_2:before {
-  background-color: rgba(253, 52, 38, 0.02);
-}
-.mainStyles.layout_2:after {
-  background-color: rgba(52, 253, 38, 0.02);
+.mainStyles.layout_2 {
+  background-color: rgba(0, 128, 128, 0.75);
 }
 .mainStyles.layout_2 .main-image {
   position: relative;
+  /*
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 50%;
+        left: 50px;
+        bottom: -50px;
+        background: rgba(0, 128, 128, 0.75);
+        transform: rotateX(84deg) skew(-48deg) rotate(56deg);
+        z-index: -1;
+      }
+*/
 }
 .mainStyles.layout_2 .main-image:before {
   content: none;
-}
-.mainStyles.layout_2 .main-image:after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 50%;
-  left: 50px;
-  bottom: -50px;
-  background: rgba(0, 128, 128, 0.75);
-  transform: rotateX(84deg) skew(-48deg) rotate(56deg);
-  z-index: -1;
+  transition: all o 0.2s ease-in-out;
 }
 .mainStyles.layout_2 .main-image img {
   width: 200px;
