--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,20 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 .mainStyles {
+  opacity: 0;
+  transition: all 2s ease-in-out;
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%23008080' fill-opacity='0.13'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
   background-color: rgba(0, 128, 128, 0.75);
   font-size: 100%;
   transition: all 0.2s ease-in-out;
 }
+.mainStyles.loaded {
+  opacity: 1;
+}
 .mainStyles .sections {
   margin: 20px auto 0;
+  z-index: 3;
 }
 .mainStyles .logo-wrapper,
 .mainStyles .skills-wrapper {
@@ -34,6 +40,7 @@ html {
 .mainStyles .logo .title {
   font-size: 5em;
   margin: 0 auto;
+  position: relative;
 }
 .mainStyles .logo .title .side-sub {
   font-size: 0.29em;
@@ -41,7 +48,9 @@ html {
   display: inline-block;
   transform: rotate(90deg);
   vertical-align: middle;
-  margin: 0 -40px 15px;
+  position: absolute;
+  left: calc(100% - 40px);
+  top: 25px;
 }
 .mainStyles .logo .sub-title {
   margin: -15px auto 0;
@@ -106,7 +115,8 @@ html {
   margin: 0 auto;
   position: relative;
   padding: 20px 20px 0;
-  height: calc(100vh - 20px);
+  height: auto;
+  min-height: calc(100vh - 20px);
   box-shadow: 0 0 300px inset rgba(0, 0, 0, 0.3);
 }
 .mainStyles .main-image {
@@ -151,6 +161,7 @@ html {
 .mainStyles .social-icons .item {
   display: table-cell;
   padding: 0 10px;
+  vertical-align: middle;
 }
 .mainStyles .social-icons .item a {
   display: block;
@@ -215,4 +226,50 @@ html {
   transform: rotate(-2deg);
   transition: all 1s ease-in-out;
   z-index: 1;
+}
+.mainStyles .sandBox {
+  position: fixed;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+.mainStyles .sandBox canvas {
+  transition: opacity 0.2s ease-in-out;
+  transition-delay: .1s;
+  opacity: 1;
+}
+.mainStyles .playPause {
+  display: block;
+  background: black;
+  padding: 8px 16px;
+  border-radius: 25px;
+}
+.mainStyles .playPause span {
+  display: inline-block;
+  vertical-align: middle;
+  color: white;
+  padding: 0 7px;
+}
+@media screen and (max-width: 1024px) {
+  .mainStyles .playPause {
+    display: none;
+  }
+}
+.mainStyles .playPause input {
+  display: none;
+}
+.mainStyles .playPause input:checked + .state {
+  display: inline-block;
+  border: 6px solid transparent;
+  border-left: 12px solid white;
+  border-right: 0px;
+  background: transparent;
+  padding: 0;
+}
+.mainStyles .playPause input:not(:checked) + .state {
+  display: inline-block;
+  background: white;
+  padding: 6px;
 }
