--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,7 @@ html {
 }
 @media screen and (max-width: 1024px) {
   .mainStyles .sandBox canvas {
-    display: none;
+    opacity: 0;
   }
 }
 .mainStyles .playPause {
