--- a/styles/styles.less
+++ b/styles/styles.less
@@ -3,26 +3,15 @@
 @import "./animate.min.css";
 :root {
   --radial: 132deg;
-  --gradColor_1: rgba(255, 183, 107, 1);
-  --gradColor_2: rgba(34, 186, 214, 1);
-  --gradColor_gray_1: rgba(105, 106, 107, 1);
-  --gradColorgray_2: rgba(205, 206, 207, 1);
-  --linerGradient: var(--gradColor_1) 15%, var(--gradColor_2) 90%;
+  --gradColor_1: rgba(55, 163, 207, .5);
+  --gradColor_2: rgba(34, 186, 214, .5);
+  --gradColor_gray_1: rgba(195, 190, 197, 1);
+  --gradColorgray_2: rgba(155, 90, 157, 1);
+  --linerGradient: var(--gradColorgray_2) 15%, var(--gradColor_gray_1) 90%;
+  --linerGradient_2: var(--gradColor_1) 15%, var(--gradColor_2) 90%;
   --animationSpeed: 3s;
 }
 
-.grad1 {
-  background-color: var(--gradColor_1, rgba(255, 183, 107, 1));
-}
-.grad2 {
-  background-color: var(--gradColor_2, rgba(34, 186, 214, 1));
-}
-.grad-t-1 {
-  color: var(--gradColor_1, rgba(255, 183, 107, 1));
-}
-.grad-t-2 {
-  color: var(--gradColor_2, rgba(34, 186, 214, 1));
-}
 .Alfa() {
   font-family: "Alfa Slab One", cursive;
 }
@@ -404,6 +393,8 @@ code {
     rgba(255, 255, 255, 1) 0%,
     rgba(188, 244, 245, 1) 30%,
     rgba(109, 197, 243, 1) 62%,
-    rgba(26, 149, 240, 1) 100%
+    var(--gradColor_2) 100%
   );
+  
+  background: linear-gradient(var(--radial), var(--linerGradient_2));
 }
